Regenerate codebase audit and rename OpenAPI spec
Full audit of all 4 modules (Core, Courier, Logger, Registry) after
monolith consolidation. Rename openapi.yaml to CodeOps-Server-OpenAPI.yaml
to follow project naming convention.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>